--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <canvas id="canvas"></canvas>
   </body>
   <script>
-    new BlueCanvasTmpl({
+    var blueCanvasTmpl = new BlueCanvasTmpl({
       el: '#canvas',
       width: 1200,
       height: 800,
