fix canvas tmpl rendered hook

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         height: 100,
         x: 1,
         y: 10
-      }]
+      }],
+      rendered:function(){
+        console.log(this);
+      }
     })
   </script>
 </html>
