--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       width: 1200,
       height: 800,
       renderList: [{
-        type: 'img',
+        type: 'image',
         src: 'https://www.dtb315.com/Static/pc/home/images/index/index/banner.png?v=197bo4v',
         width: 500,
         height: 300,
@@ -25,7 +25,7 @@
         x: 0,
         y: 100
       }, {
-        type: 'img',
+        type: 'image',
         src: 'https://www.dtb315.com/Static/pc/home/images/logo-title.png?v=1b6kl7f',
         width: 200,
         height: 100,
