update typescript building

--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
       }, {
         type: 'text',
         content: '好好好好好',
+        drawType: `stroke`,
+        font: `30px arial, 微软雅黑, sans-serif`,
         x: 0,
         y: 100
       }, {
         type: 'image',
         src: 'https://www.dtb315.com/Static/pc/home/images/logo-title.png?v=1b6kl7f',
-        width: 200,
-        height: 100,
+        width: 50,
+        height: 50,
         x: 1,
         y: 10
       }],
-      rendered:function(){
+      rendered: function () {
         console.log(this);
       }
     })
